--- a/Html3.html
+++ b/Html3.html
@@ -4,10 +4,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<script src="./Java1.js">
 		</script>
-	</head
+	</head>
 	
 	<body>
-
+		
 		<div id="xo";style="background-color:#e5e5e5;padding:15px;text-align:center;"> Hello World
 		</div>
 		<button type="button" onclick="changetext()">Click Me!</button>
